*Merge AnimationPlayer.cs into Player.cs
*Move the view with movement of the player
**Add property "int OffsetFromOrigin" in Level
**Add property "Vector2 ScreenPosition" in Object
**Modify all Draw method, replacing "position" with "ScreenPosition"

*Rotate the Mirror in the opposite direction
**Add DOWN key in Mirror.Control()
**Add DOWN key to Switch.CollisionResponse(Object obj)

*Add new class "Tile"

--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -87,7 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\Object.Sprite.Animation.cs" />
-    <Compile Include="Source\Object.Sprite.AnimationPlayer.cs" />
     <Compile Include="Source\Object.StaticObject.IControlledObject.cs" />
     <Compile Include="Source\Object.StaticObject.Door.cs" />
     <Compile Include="Source\Level.cs" />
@@ -97,6 +96,7 @@
     <Compile Include="Source\Object.StaticObject.Hint.cs" />
     <Compile Include="Source\Object.StaticObject.Mirror.cs" />
     <Compile Include="Source\Object.StaticObject.Switch.cs" />
+    <Compile Include="Source\Object.StaticObject.Tile.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Source\Game1.cs" />
     <Compile Include="Source\Object.Sprite.cs" />
