--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -98,7 +98,9 @@
     <Compile Include="Source\Object.StaticObject.Ladder.cs" />
     <Compile Include="Source\Object.StaticObject.Mirror.cs" />
     <Compile Include="Source\Object.StaticObject.Switch.cs" />
+    <Compile Include="Source\Object.Tile.Block.cs" />
     <Compile Include="Source\Object.Tile.cs" />
+    <Compile Include="Source\Object.Tile.Platform.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Source\Game1.cs" />
     <Compile Include="Source\Object.Sprite.cs" />
