--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Object.StaticObject.Hint.cs" />
     <Compile Include="Source\Object.StaticObject.Ladder.cs" />
+    <Compile Include="Source\Object.StaticObject.Light.cs" />
     <Compile Include="Source\Object.StaticObject.Mirror.cs" />
     <Compile Include="Source\Object.StaticObject.Switch.cs" />
     <Compile Include="Source\Object.Tile.Block.cs" />
