--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -86,7 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Source\Helper\LineSegment.cs" />
+    <Compile Include="Source\Helper\Line.cs" />
     <Compile Include="Source\Object.Sprite.Animation.cs" />
     <Compile Include="Source\Object.StaticObject.IControlledObject.cs" />
     <Compile Include="Source\Object.StaticObject.Door.cs" />
