--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -86,6 +86,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Source\Helper\LineSegment.cs" />
+    <Compile Include="Source\Helper\Ray.cs" />
     <Compile Include="Source\Helper\Line.cs" />
     <Compile Include="Source\Object.Sprite.Animation.cs" />
     <Compile Include="Source\Object.StaticObject.IControlledObject.cs" />
@@ -95,7 +97,7 @@
     <Compile Include="Source\Object.Sprite.Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Object.StaticObject.Ladder.cs" />
-    <Compile Include="Source\Object.StaticObject.Light.cs" />
+    <Compile Include="Source\Object.StaticObject.LightSource.cs" />
     <Compile Include="Source\Object.StaticObject.Mirror.cs" />
     <Compile Include="Source\Object.StaticObject.Switch.cs" />
     <Compile Include="Source\Object.Tile.Block.cs" />
@@ -105,7 +107,7 @@
     <Compile Include="Source\Game1.cs" />
     <Compile Include="Source\Object.Sprite.cs" />
     <Compile Include="Source\Object.StaticObject.cs" />
-    <Compile Include="Source\Object.StaticObject.Ray.cs" />
+    <Compile Include="Source\Object.StaticObject.LightRay.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
