--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -87,10 +87,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Source\Helper\IController.cs" />
+    <Compile Include="Source\Helper\OgreBase.cs" />
+    <Compile Include="Source\Helper\OgreCore.cs" />
     <Compile Include="Source\Helper\TreasureManager.cs" />
     <Compile Include="Source\Object.StaticObject.DeadlyObject.cs" />
     <Compile Include="Source\Object.StaticObject.Launcher.cs" />
     <Compile Include="Source\Object.Sprite.Enemy.cs" />
+    <Compile Include="Source\Object.StaticObject.Ogre.cs" />
     <Compile Include="Source\Object.StaticObject.ShiftStick.cs" />
     <Compile Include="Source\Helper\LineSegment.cs" />
     <Compile Include="Source\Helper\Ray.cs" />
