--- a/Demeter/Demeter.csproj
+++ b/Demeter/Demeter.csproj
@@ -86,6 +86,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Source\Helper\BindingPoint.cs" />
     <Compile Include="Source\Helper\Helper.cs" />
     <Compile Include="Source\Helper\IController.cs" />
     <Compile Include="Source\Helper\OgreBase.cs" />
