--- a/.hgignore
+++ b/.hgignore
@@ -1,6 +1,12 @@
-glob:Demeter/Content/obj/*
-glob:Demeter/Content/texture2/*
-glob:Demeter/bin/*
-glob:Demeter/obj/*
-glob:Demeter/Demeter.csproj.Debug.cachefile
-glob:Demeter.suo
+syntax: glob
+Demeter/Content/obj/*
+Demeter/Content/texture2/*
+Demeter/bin/*
+Demeter/obj/*
+Demeter/Demeter.csproj.Debug.cachefile
+Demeter.suo
+_ReSharper.*
+_UpgradeReport_Files/*
+Backup/*
+UpgradeLog.XML
+*.user
